минимально работающая страница upload
