# openapi.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: fairdrop api
-  version: 1.1.1
+  version: 1.1.2
 servers:
   - url: ./
 paths:
@@ -60,8 +60,10 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+                - files
               properties:
-                file:
+                files:
                   type: array
                   items:
                     type: string
